--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,31 @@ jobs:
         with:
           node-version: "latest"
 
+      - name: Install dependencies
+        run: |
+          npm install -g javascript-obfuscator
+
       - name: Clone BPB workjs
         run: |
           wget -O origin.js https://raw.githubusercontent.com/bia-pain-bache/BPB-Worker-Panel/refs/heads/main/build/unobfuscated-worker.js
 
+      - name: Obfuscate BPB worker js
+        run: |
+          javascript-obfuscator origin.js --output _worker.js \
+          --compact true \
+          --identifier-names-generator hexadecimal \
+          --rename-globals true \
+          --string-array true \
+          --string-array-encoding 'base64' \
+          --string-array-threshold 0.75 \
+          --transform-object-keys true \
+          --self-defending false \
+          --simplify true
+
       - name: Move to index.ts
         run: |
           mkdir -p src
-          mv origin.js src/index.ts
+          mv _worker.js src/index.ts
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
