--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,14 +46,15 @@ jobs:
 
       - name: Create wrangler.jsonc
         run: |
+          mkdir -p main
           echo '{
-            "name": "btvp-worker",
+            "name": "btvw",
             "compatibility_date": "'$(date +%Y-%m-%d)'",
             "main": "src/index.ts",
             "compatibility_flags": [
               "nodejs_compat"
             ]
-          }' > wrangler.jsonc
+          }' > main/wrangler.jsonc
 
       - name: Move to index.ts
         run: |
@@ -67,3 +68,9 @@ jobs:
           commit_message: ':arrow_up: update latest bpb panel'
           commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
           push_options: '--set-upstream'
+
+      - name: Deploy Worker
+        run: npx wrangler deploy --config=main/wrangler.jsonc
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
