--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -27,7 +27,7 @@ jobs:
       - name: 生成 wrangler.jsonc
         run: |
           echo '{
-            "name": "btvw",
+            "name": "btvw-0406",
             "compatibility_date": "'$(date +%Y-%m-%d)'",
             "main": "src/index.ts",
             "compatibility_flags": [
